src/objects/zkmulti__MCShipment_Special_Services__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__AMDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__AdultSignatureRestrictedDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult Signature Restricted Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__AdultSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlcoholRecipientType__c</fullName>
        <label>Alcohol Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CONSUMER</fullName>
                </value>
                <value>
                    <fullName>LICENSEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__AlcoholShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alcohol Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__AllowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Blind_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blind Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoAccount__c</fullName>
        <label>BSO Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoBrokerType__c</fullName>
        <label>BSO Broker Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXPORT</fullName>
                </value>
                <value>
                    <fullName>IMPORT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__BsoCity__c</fullName>
        <label>BSO City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoCompany__c</fullName>
        <label>BSO Company</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoContactEmail__c</fullName>
        <label>BSO Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoContactId__c</fullName>
        <label>BSO Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoContactName__c</fullName>
        <label>BSO Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoContactPhoneExtension__c</fullName>
        <label>BSO Contact Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoContactPhone__c</fullName>
        <label>BSO Contact Phone</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoContactTitle__c</fullName>
        <label>BSO Contact Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoCountry__c</fullName>
        <label>BSO Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoPostalCode__c</fullName>
        <label>BSO Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoState__c</fullName>
        <label>BSO State/Province</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoStreet__c</fullName>
        <label>BSO Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__BsoTaxIdType__c</fullName>
        <label>BSO Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>Business National</fullName>
                </value>
                <value>
                    <fullName>Business State</fullName>
                </value>
                <value>
                    <fullName>Business Union</fullName>
                </value>
                <value>
                    <fullName>Personal National</fullName>
                </value>
                <value>
                    <fullName>Personal State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__BsoTaxId__c</fullName>
        <label>BSO Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Bso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__COD_Amount__c</fullName>
        <label>COD Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarbonNeutral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carbon Neutral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Certified_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodAS3816__c</fullName>
        <label>COD AS3816</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodAccount__c</fullName>
        <label>COD Collection Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodAddressIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COD Collection Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodCity__c</fullName>
        <label>COD Collection City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodCollectionType__c</fullName>
        <label>COD Collection Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodCompany__c</fullName>
        <label>COD Collection Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodContactName__c</fullName>
        <label>COD Collection Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodContactPhone__c</fullName>
        <label>COD Collection Contact Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodContactTaxIdType__c</fullName>
        <label>COD Collection Contact Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>Business National</fullName>
                </value>
                <value>
                    <fullName>Business State</fullName>
                </value>
                <value>
                    <fullName>Business Union</fullName>
                </value>
                <value>
                    <fullName>Personal National</fullName>
                </value>
                <value>
                    <fullName>Personal State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__CodContactTaxId__c</fullName>
        <label>COD Collection Contact Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodCountryCode__c</fullName>
        <label>COD Collection Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodOptionalEndorsement__c</fullName>
        <description>Option Endorsement for USPS, COD Type for FedEx</description>
        <label>COD Optional Endorsement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodPMExpressReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COD PM Express Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodPostalCode__c</fullName>
        <label>COD Collection Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodReferenceType__c</fullName>
        <label>COD Reference Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodState__c</fullName>
        <label>COD Collection State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodStreet__c</fullName>
        <label>COD Collection Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodTrackingId__c</fullName>
        <label>COD Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CodUSPSCA__c</fullName>
        <label>COD USPSCA</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Collect_On_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect On Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Consolidation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidation</label>
        <referenceTo>zkmulti__MultiPackageShipment__c</referenceTo>
        <relationshipLabel>Shipment Special Services</relationshipLabel>
        <relationshipName>Shipment_Special_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__DangerousGoodsCargoAircraftOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dangerous goods shipment is packaged and documented for movement on cargo aircraft only.</description>
        <inlineHelpText>Dangerous goods shipment is packaged and documented for movement on cargo aircraft only.</inlineHelpText>
        <label>Dangerous Goods Cargo Aircraft Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DangerousGoods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dangerous Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DateCertainHomeDeliveryDate__c</fullName>
        <label>FedEx Date Certain Home Delivery® Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeliverToAddresseeOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver To Addressee Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeliveryConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DirectDeliveryOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Delivery Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DryIce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dry Ice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ElectronicReturnReceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Return Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__FreightInsideDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Inside Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__FreightInsidePickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Inside Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__HalCity__c</fullName>
        <label>FedEx Location City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__HalPhone__c</fullName>
        <label>HAL Contact phone</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__HalPostalCode__c</fullName>
        <label>FedEx Location Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__HalState__c</fullName>
        <label>FedEx Location State/Province</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__HalStreet__c</fullName>
        <label>FedEx Location Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Hal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold at FedEx Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__HazardousMaterials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__HomeDeliveryPremiumType__c</fullName>
        <label>Home Delivery Premium Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Insurance_Amount__c</fullName>
        <label>Insurance Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__InsuredType__c</fullName>
        <label>Insured Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__IntlReturnCustomsReturnDescription__c</fullName>
        <description>Specifies additional description about customs return type. This is a required field when the customs return type is &quot;OTHER&quot;</description>
        <inlineHelpText>Specifies additional description about customs return type. This is a required field when the customs return type is &quot;OTHER&quot;</inlineHelpText>
        <label>Intl Return Customs Return Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__IntlReturnCustomsReturnType__c</fullName>
        <label>Intl Return Customs Return Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__IsPackageReleaseCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Package Release Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__LithiumBatteriesCells__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lithium Batteries/Cells</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__LithiumBatteryException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lithium Battery Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__LiveAnimalSurcharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Animal Surcharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NoDeliveryOnSaturdays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Delivery on Saturdays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__OneRate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__OrmD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORM-D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackageReleaseCode__c</fullName>
        <label>Package Release Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PharmacyDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacy Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__PriorityAlert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__RegisteredMailValue__c</fullName>
        <label>Registered Mail Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__RegisteredMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__RestrictedDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ReturnReceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ReturnsClearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returns Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SaturdayDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SaturdayHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SaturdayPickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SelectedSignatureOption__c</fullName>
        <label>Selected Signature Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipName>MCShipment_Special_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatureConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatureReleaseNumber__c</fullName>
        <label>Signature Release Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatureWaiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SmallQuantityException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Quantity Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SpecialContents__c</fullName>
        <label>Special Contents</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ThirdPartyConsignee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Consignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalCodAmountCurrency__c</fullName>
        <label>COD Total Collection Amount Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Shipment Special Services</label>
    <nameField>
        <displayFormat>Special-Services-{000000000}</displayFormat>
        <label>Shipment Special Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Special Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>